# Quant_Backtest_Harness_vOmega

./: .gitignore  README.md  TOPICS_TO_SET_ON_GITHUB.txt  pyproject.toml  run.py
.github/workflows/: ci.yml
docs/: example_output.txt
